# fossilizid

./: CMakeLists.txt  README.md
doc/: Juggle说明文档.docx  fossilizid说明文档.docx  juggle.txt
juggle/: CMakeLists.txt
juggle/interface/: channel.h  juggle.h  mutex.h  object.h  semaphore.h  service.h
juggle/rpcmake/: codegen.py  rpcmake.py
juggle/service/: caller.cpp  caller.h  module.cpp  module.h  semaphore.cpp  service.cpp  service.h
remoteq/: CMakeLists.txt  channel.h  queue.h
remoteq/fast/windows/: acceptorimpl.cpp  acceptorimpl.h  channelimpl.cpp  channelimpl.h
remoteq/reliable/windows/: acceptorimpl.cpp  acceptorimpl.h  channelimpl.cpp  channelimpl.h
remoteq/windows/: acceptorimpl.h  channelimpl.h  close.cpp  endpointimpl.h  handle.h  overlapped.h  queueimpl.cpp
test/: CMakeLists.txt
test/test_service/client/: CMakeLists.txt  main.cpp
test/test_service/juggle_achieve/: CMakeLists.txt  channelserver.h
test/test_service/juggle_achieve/json_plugin/: channel.h  channelserver.cpp  json_plugin.h  object.h
test/test_service/juggle_scprit/: juggle.juggle
test/test_service/juggle_scprit/client/: callerservicedefine.cpp  jugglecaller.h
test/test_service/juggle_scprit/server/: globalhandledefine.cpp  jugglemodule.h
test/test_service/server/: CMakeLists.txt  main.cpp
test/test_udp/client/: CMakeLists.txt  main.cpp
test/test_udp/server/: CMakeLists.txt  main.cpp
